# tech-stacks

./: .gitignore  README.md  build_all.sh  callback_data.sh  copy_test.sh  software_version.md  todo.txt
cpp_boost/: install-dependencies.sh  nohup.out
cpp_language/: .gitignore  README.md
cpp_language/container/: string_op.cc
cpp_language/cpp11/: array.cc  build.sh  callback_lambda.cc  smartptr_shared.cc  smartptr_shared.h
cpp_language/design_pattern_for_factory/: a.out  combiner.cc  combiner.h  combiner.h.gch  feature_op.cc  feature_op.h  feature_op.h.gch  feature_op_factory.cc  feature_op_factory.h  feature_op_factory_test.cc  general_factory.h  id_feature_list.cc  id_feature_list.h
ml_eigen/: CMakeLists.txt  README.md  install-dependencies.sh
ml_eigen/learning/: CMakeLists.txt  README.md  basic_matrix.cc  conv2d.cc  eigen_unaryexpr_test.cc  matrix_basic.cc  matrix_tensormap.cc  system_info.h  timer.h
ml_flink/: README.md
openmit-streaming/: pom.xml
openmit-streaming/flink-examples/: pom.xml
openmit-streaming/flink-examples/src/main/java/org/apache/flink/examples/java/wordcount/: WordCount.java
openmit-streaming/flink-examples/src/main/java/org/apache/flink/streaming/examples/wordcount/: WordCount.java
openmit-streaming/src/main/java/: Test.java
python_language/cc/: build.sh  pycallclass.cc  pycallclass.py
rpc_grpc/: CMakeLists.txt  README.md  build.sh  compile-pb-with-grpc.sh  install-dependencies.sh
rpc_grpc/conf/: env_path.conf
rpc_grpc/learning/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
rpc_muduo/: .gitignore  README.md  install-dependencies.sh
rpc_seastar/: README.md
rpc_thrift/: .gitignore  CMakeLists.txt  README.md  build.sh  compile-thrift.sh  install-dependencies.sh
rpc_thrift/learning/: CMakeLists.txt  app_client.cc  app_server.cc  basic_client.cc  basic_pb_client.cc  basic_pb_server.cc  basic_server.cc  client.cc  compile-thrift.sh  server.cc  thrift_thread_manager.cc
rpc_thrift/learning/openmit-common/: CMakeLists.txt  build.sh  synchronizer.h  synchronizer_test.cc  thrift_client_wrapper.h  thrift_server_wrapper.h
rpc_thrift/learning/openmit-common/test/: CMakeLists.txt  io_file_test.cc  io_read_test.cc  io_stdin_read.cc
rpc_thrift/learning/openmit-graph/: CMakeLists.txt  build.sh
rpc_thrift/learning/openmit-idl/: CMakeLists.txt  build.sh  clean_build.sh  ps.thrift
rpc_thrift/learning/openmit-idl/script/: compile-pb.sh  compile-thrift.sh
rpc_thrift/learning/openmit-ps/: ps_handler.cc  ps_handler.h
rpc_thrift/learning/openmit_common/: CMakeLists.txt  synchronizer_test.cc  thrift_client_wrapper.h
rpc_thrift/learning/thrift/: zy.thrift
software/: openmit_basic_software.sh  ubuntu_prep_installed.sh
tensorflow_cpp/: CMakeLists.txt  README.md  build.sh
tensorflow_cpp/conf/: tensorflow.conf
tensorflow_cpp/doc/: tensorflow_distributed.md
tensorflow_cpp/learning/: CMakeLists.txt  tf_session.cc
tools_gflags/: CMakeLists.txt  build_gflags.sh  install-dependencies.sh
tools_gflags/learning/: CMakeLists.txt  basic_test.cc  gflags_basic.cc
tools_gflags/learning/core/: basic.cc  basic.h  gflags_define.cc  test.cc
tools_gflags/script/: gflags_basic.sh
tools_glog/: CMakeLists.txt  build.sh  concat.cc  install-dependencies.sh
tools_glog/learning/: CMakeLists.txt  basic.cc
tools_gperftools/: install-dependencies.sh
tools_gtest/: CMakeLists.txt  build.sh  install-dependencies.sh
tools_gtest/learning/: CMakeLists.txt  sample1_unittest.cc
tools_other/: README.md  install-cityhash.sh  install-curl.sh  install-dependencies.sh  install-git.sh  install-jsoncpp.sh
tools_protobuf/: .gitignore  compile-pb.sh  install-dependencies.sh  vimrc
tools_protobuf/gen-files/cpp/: instance.pb.h
tools_protobuf/gen-files/java/org/openmit/entry/: DenseFeatureOrBuilder.java  FeatureOrBuilder.java  Instance.java  InstanceOrBuilder.java  InstanceProtos.java  Instances.java  InstancesOrBuilder.java
tools_protobuf/gen-files/python/: instance_pb2.py
tools_protobuf/gen-pb/cpp/: instance.pb.cc
tools_protobuf/gen-pb/java/org/openmit/entry/: DenseFeature.java  Feature.java  Features.java  FeaturesOrBuilder.java  Label.java  LabelOrBuilder.java
tools_protobuf/proto/: feature.proto  instance.proto
tools_scons/: install-dependencies.sh
tools_shell/: README.md  cmd_supervise.sh
tools_sparsehash/: build.sh  install-dependencies.sh
